--- a/css/agency.css
+++ b/css/agency.css
@@ -296,7 +296,7 @@ header {
     color: #fff;
     background-attachment: scroll;
     background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-                      url(../img/background3.jpg);
+                      url(http://hdqwalls.com/wallpapers/camera-lens.jpg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
