--- a/css/gallery.css
+++ b/css/gallery.css
@@ -60,8 +60,20 @@ a {
   height: auto;
   padding: 0;
   margin: 0;
+  transition: all .2s ease-in-out;
 }
- 
+
+.row:hover img {
+  opacity: .6;
+  transform: scale(.92);
+}
+
+.row img:hover {
+  opacity: 1;
+  transform: scale(1) rotate(2deg);
+  box-shadow: 0 0 7px rgba(0, 0, 0, .5);
+}
+
 .gallery ul li {
   float: left;
   margin: 0 0.87719%;
