Gallery:fix goback switch
Signed-off-by: HASH <hasherror404@gmail.com>

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -28,7 +28,7 @@ a {
   color: #fff;
   border-radius: 3px;
   background-color: #008080;
-  padding: 15px 20px;
+  padding:1% 2%;
   right: 15px;
   bottom: 15px;
 }
